Compilador/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> package_decl import_decls class_decls
Rule 2     program -> import_decls class_decls
Rule 3     program -> class_decls
Rule 4     package_decl -> PACKAGE qualified_id PUNTO_Y_COMA
Rule 5     import_decls -> import_decl import_decls
Rule 6     import_decls -> import_decl
Rule 7     import_decl -> IMPORT qualified_id PUNTO_Y_COMA
Rule 8     class_decls -> class_decl class_decls
Rule 9     class_decls -> class_decl
Rule 10    class_decl -> class_header LLAVE_ABIERTA class_body LLAVE_CERRADA
Rule 11    class_header -> modifiers CLASS ID extends_clause implements_clause
Rule 12    class_header -> CLASS ID extends_clause implements_clause
Rule 13    extends_clause -> EXTENDS qualified_id
Rule 14    extends_clause -> empty
Rule 15    implements_clause -> IMPLEMENTS qualified_id_list
Rule 16    implements_clause -> empty
Rule 17    class_body -> class_members
Rule 18    class_members -> class_member class_members
Rule 19    class_members -> empty
Rule 20    class_member -> field_decl
Rule 21    class_member -> method_decl
Rule 22    class_member -> constructor_decl
Rule 23    class_member -> class_decl
Rule 24    field_decl -> modifiers type variables PUNTO_Y_COMA
Rule 25    variables -> variable COMA variables
Rule 26    variables -> variable
Rule 27    variable -> ID
Rule 28    variable -> ID ASIGNACION expression
Rule 29    method_decl -> method_header block
Rule 30    method_header -> modifiers type ID PARENTESIS_ABIERTO formal_params PARENTESIS_CERRADO
Rule 31    method_header -> modifiers VOID ID PARENTESIS_ABIERTO formal_params PARENTESIS_CERRADO
Rule 32    method_header -> modifiers type ID PARENTESIS_ABIERTO PARENTESIS_CERRADO
Rule 33    method_header -> modifiers VOID ID PARENTESIS_ABIERTO PARENTESIS_CERRADO
Rule 34    method_call -> ID PARENTESIS_ABIERTO arguments PARENTESIS_CERRADO
Rule 35    method_call -> THIS PARENTESIS_ABIERTO arguments PARENTESIS_CERRADO
Rule 36    method_call -> SUPER PARENTESIS_ABIERTO arguments PARENTESIS_CERRADO
Rule 37    method_call -> NEW creator PARENTESIS_ABIERTO arguments PARENTESIS_CERRADO
Rule 38    formal_params -> formal_param COMA formal_params
Rule 39    formal_params -> formal_param
Rule 40    formal_params -> empty
Rule 41    formal_param -> type ID
Rule 42    formal_param -> array_type ID
Rule 43    array_type -> primitive_type CORCHETE_ABIERTO CORCHETE_CERRADO
Rule 44    array_type -> reference_type CORCHETE_ABIERTO CORCHETE_CERRADO
Rule 45    constructor_decl -> modifiers ID PARENTESIS_ABIERTO formal_params PARENTESIS_CERRADO block
Rule 46    block -> LLAVE_ABIERTA statements LLAVE_CERRADA
Rule 47    block -> LLAVE_ABIERTA LLAVE_CERRADA
Rule 48    statements -> statement statements
Rule 49    statements -> empty
Rule 50    statement -> block
Rule 51    statement -> WHILE PARENTESIS_ABIERTO expression PARENTESIS_CERRADO statement
Rule 52    statement -> DO statement WHILE PARENTESIS_ABIERTO expression PARENTESIS_CERRADO PUNTO_Y_COMA
Rule 53    statement -> FOR PARENTESIS_ABIERTO for_init PUNTO_Y_COMA expression PUNTO_Y_COMA for_update PARENTESIS_CERRADO statement
Rule 54    statement -> SWITCH PARENTESIS_ABIERTO expression PARENTESIS_CERRADO LLAVE_ABIERTA switch_cases LLAVE_CERRADA
Rule 55    statement -> RETURN expression PUNTO_Y_COMA
Rule 56    statement -> RETURN PUNTO_Y_COMA
Rule 57    statement -> BREAK PUNTO_Y_COMA
Rule 58    statement -> CONTINUE PUNTO_Y_COMA
Rule 59    statement -> THROW expression PUNTO_Y_COMA
Rule 60    statement -> TRY block catches
Rule 61    statement -> ASSERT expression PUNTO_Y_COMA
Rule 62    statement -> TRY block catches FINALLY block
Rule 63    statement -> expression PUNTO_Y_COMA
Rule 64    statement -> local_var_decl PUNTO_Y_COMA
Rule 65    statement -> PUNTO_Y_COMA
Rule 66    for_init -> local_var_decl
Rule 67    for_init -> expression_list
Rule 68    for_update -> expression_list
Rule 69    expression_list -> expression
Rule 70    expression_list -> expression COMA expression_list
Rule 71    switch_cases -> switch_case switch_cases
Rule 72    switch_cases -> switch_case
Rule 73    switch_case -> CASE expression DOSPUNTOS statements
Rule 74    switch_case -> DEFAULT DOSPUNTOS statements
Rule 75    catches -> catch catches
Rule 76    catches -> catch
Rule 77    catch -> CATCH PARENTESIS_ABIERTO formal_param PARENTESIS_CERRADO block
Rule 78    local_var_decl -> type variables
Rule 79    type -> primitive_type
Rule 80    type -> reference_type
Rule 81    primitive_type -> INT
Rule 82    primitive_type -> FLOAT
Rule 83    primitive_type -> DOUBLE
Rule 84    primitive_type -> CHAR
Rule 85    primitive_type -> BOOLEAN
Rule 86    primitive_type -> SHORT
Rule 87    primitive_type -> LONG
Rule 88    primitive_type -> STRING
Rule 89    primitive_type -> BYTE
Rule 90    reference_type -> qualified_id
Rule 91    qualified_id -> ID PUNTO ID
Rule 92    qualified_id -> ID
Rule 93    qualified_id_list -> qualified_id COMA qualified_id_list
Rule 94    qualified_id_list -> qualified_id
Rule 95    expression -> assignment_expression
Rule 96    assignment_expression -> conditional_expression
Rule 97    assignment_expression -> ID assignment_operator expression
Rule 98    assignment_operator -> ASIGNACION
Rule 99    assignment_operator -> ASIGNACION_SUMA
Rule 100   assignment_operator -> ASIGNACION_RESTA
Rule 101   assignment_operator -> ASIGNACION_MULTIPLICACION
Rule 102   assignment_operator -> ASIGNACION_DIVISION
Rule 103   assignment_operator -> ASIGNACION_MODULO
Rule 104   assignment_operator -> DESPLAZAMIENTO_IZQUIERDO_ASIGNACION
Rule 105   assignment_operator -> DESPLAZAMIENTO_DERECHO_ASIGNACION
Rule 106   conditional_expression -> logical_or_expression
Rule 107   conditional_expression -> logical_or_expression TERNARIO expression DOSPUNTOS conditional_expression
Rule 108   logical_or_expression -> logical_and_expression
Rule 109   logical_or_expression -> logical_or_expression OR_LOGICO logical_and_expression
Rule 110   logical_and_expression -> inclusive_or_expression
Rule 111   logical_and_expression -> logical_and_expression AND_LOGICO inclusive_or_expression
Rule 112   inclusive_or_expression -> exclusive_or_expression
Rule 113   inclusive_or_expression -> inclusive_or_expression OR_BIT exclusive_or_expression
Rule 114   exclusive_or_expression -> and_expression
Rule 115   exclusive_or_expression -> exclusive_or_expression XOR_BIT and_expression
Rule 116   and_expression -> equality_expression
Rule 117   and_expression -> and_expression AND_BIT equality_expression
Rule 118   equality_expression -> relational_expression
Rule 119   equality_expression -> equality_expression IGUAL relational_expression
Rule 120   equality_expression -> equality_expression DISTINTO relational_expression
Rule 121   relational_expression -> shift_expression
Rule 122   relational_expression -> relational_expression MENOR shift_expression
Rule 123   relational_expression -> relational_expression MAYOR shift_expression
Rule 124   relational_expression -> relational_expression MENOR_IGUAL shift_expression
Rule 125   relational_expression -> relational_expression MAYOR_IGUAL shift_expression
Rule 126   relational_expression -> relational_expression INSTANCEOF reference_type
Rule 127   shift_expression -> additive_expression
Rule 128   shift_expression -> shift_expression DESPLAZAMIENTO_IZQUIERDO additive_expression
Rule 129   shift_expression -> shift_expression DESPLAZAMIENTO_DERECHO additive_expression
Rule 130   additive_expression -> multiplicative_expression
Rule 131   additive_expression -> additive_expression SUMA multiplicative_expression
Rule 132   additive_expression -> additive_expression RESTA multiplicative_expression
Rule 133   multiplicative_expression -> unary_expression
Rule 134   multiplicative_expression -> multiplicative_expression MULTIPLICACION unary_expression
Rule 135   multiplicative_expression -> multiplicative_expression DIVISION unary_expression
Rule 136   multiplicative_expression -> multiplicative_expression MODULO unary_expression
Rule 137   unary_expression -> postfix_expression
Rule 138   unary_expression -> INCREMENTO unary_expression
Rule 139   unary_expression -> DECREMENTO unary_expression
Rule 140   unary_expression -> SUMA unary_expression
Rule 141   unary_expression -> RESTA unary_expression
Rule 142   unary_expression -> UMAS unary_expression
Rule 143   unary_expression -> UMENOS unary_expression
Rule 144   unary_expression -> NOT unary_expression
Rule 145   unary_expression -> NOT_BIT unary_expression
Rule 146   statement -> IF PARENTESIS_ABIERTO expression PARENTESIS_CERRADO statement
Rule 147   statement -> IF PARENTESIS_ABIERTO expression PARENTESIS_CERRADO statement ELSE statement
Rule 148   postfix_expression -> primary
Rule 149   postfix_expression -> postfix_expression INCREMENTO
Rule 150   postfix_expression -> postfix_expression DECREMENTO
Rule 151   postfix_expression -> postfix_expression PUNTO member_access
Rule 152   postfix_expression -> postfix_expression CORCHETE_ABIERTO expression CORCHETE_CERRADO
Rule 153   member_access -> ID
Rule 154   member_access -> THIS
Rule 155   member_access -> SUPER
Rule 156   member_access -> NEW creator
Rule 157   member_access -> method_call
Rule 158   primary -> literal
Rule 159   primary -> THIS
Rule 160   primary -> SUPER
Rule 161   primary -> PARENTESIS_ABIERTO expression PARENTESIS_CERRADO
Rule 162   primary -> NEW creator
Rule 163   primary -> qualified_id
Rule 164   literal -> NUMERO
Rule 165   literal -> CADENA
Rule 166   literal -> TRUE
Rule 167   literal -> FALSE
Rule 168   literal -> NULL
Rule 169   literal -> OCTAL_NUMERO
Rule 170   literal -> HEX_NUMERO
Rule 171   literal -> BINARIO_NUMERO
Rule 172   creator -> qualified_id PARENTESIS_ABIERTO arguments PARENTESIS_CERRADO
Rule 173   creator -> qualified_id CORCHETE_ABIERTO expression CORCHETE_CERRADO
Rule 174   creator -> qualified_id CORCHETE_ABIERTO CORCHETE_CERRADO
Rule 175   creator -> primitive_type CORCHETE_ABIERTO expression CORCHETE_CERRADO
Rule 176   creator -> primitive_type CORCHETE_ABIERTO CORCHETE_CERRADO
Rule 177   arguments -> expression_list
Rule 178   arguments -> empty
Rule 179   modifiers -> modifier modifiers
Rule 180   modifiers -> modifier
Rule 181   modifier -> PUBLIC
Rule 182   modifier -> PRIVATE
Rule 183   modifier -> PROTECTED
Rule 184   modifier -> STATIC
Rule 185   modifier -> FINAL
Rule 186   modifier -> ABSTRACT
Rule 187   modifier -> NATIVE
Rule 188   modifier -> SYNCHRONIZED
Rule 189   modifier -> VOLATILE
Rule 190   modifier -> EXPORT
Rule 191   modifier -> INTERFACE
Rule 192   modifier -> TRANSIENT
Rule 193   empty -> <empty>

Terminals, with rules where they appear

ABSTRACT             : 186
AND_BIT              : 117
AND_LOGICO           : 111
ASIGNACION           : 28 98
ASIGNACION_DIVISION  : 102
ASIGNACION_MODULO    : 103
ASIGNACION_MULTIPLICACION : 101
ASIGNACION_RESTA     : 100
ASIGNACION_SUMA      : 99
ASSERT               : 61
BINARIO_NUMERO       : 171
BOOLEAN              : 85
BREAK                : 57
BYTE                 : 89
CADENA               : 165
CASE                 : 73
CATCH                : 77
CHAR                 : 84
CLASS                : 11 12
COMA                 : 25 38 70 93
CONTINUE             : 58
CORCHETE_ABIERTO     : 43 44 152 173 174 175 176
CORCHETE_CERRADO     : 43 44 152 173 174 175 176
DECREMENTO           : 139 150
DEFAULT              : 74
DESPLAZAMIENTO_DERECHO : 129
DESPLAZAMIENTO_DERECHO_ASIGNACION : 105
DESPLAZAMIENTO_IZQUIERDO : 128
DESPLAZAMIENTO_IZQUIERDO_ASIGNACION : 104
DISTINTO             : 120
DIVISION             : 135
DO                   : 52
DOSPUNTOS            : 73 74 107
DOUBLE               : 83
ELSE                 : 147
EXPORT               : 190
EXTENDS              : 13
FALSE                : 167
FINAL                : 185
FINALLY              : 62
FLOAT                : 82
FOR                  : 53
HEX_NUMERO           : 170
ID                   : 11 12 27 28 30 31 32 33 34 41 42 45 91 91 92 97 153
IF                   : 146 147
IGUAL                : 119
IMPLEMENTS           : 15
IMPORT               : 7
INCREMENTO           : 138 149
INSTANCEOF           : 126
INT                  : 81
INTERFACE            : 191
LLAVE_ABIERTA        : 10 46 47 54
LLAVE_CERRADA        : 10 46 47 54
LONG                 : 87
MAYOR                : 123
MAYOR_IGUAL          : 125
MENOR                : 122
MENOR_IGUAL          : 124
MODULO               : 136
MULTIPLICACION       : 134
NATIVE               : 187
NEW                  : 37 156 162
NOT                  : 144
NOT_BIT              : 145
NULL                 : 168
NUMERO               : 164
OCTAL_NUMERO         : 169
OR_BIT               : 113
OR_LOGICO            : 109
PACKAGE              : 4
PARENTESIS_ABIERTO   : 30 31 32 33 34 35 36 37 45 51 52 53 54 77 146 147 161 172
PARENTESIS_CERRADO   : 30 31 32 33 34 35 36 37 45 51 52 53 54 77 146 147 161 172
PRIVATE              : 182
PROTECTED            : 183
PUBLIC               : 181
PUNTO                : 91 151
PUNTO_Y_COMA         : 4 7 24 52 53 53 55 56 57 58 59 61 63 64 65
RESTA                : 132 141
RETURN               : 55 56
SHORT                : 86
STATIC               : 184
STRING               : 88
SUMA                 : 131 140
SUPER                : 36 155 160
SWITCH               : 54
SYNCHRONIZED         : 188
TERNARIO             : 107
THIS                 : 35 154 159
THROW                : 59
TRANSIENT            : 192
TRUE                 : 166
TRY                  : 60 62
UMAS                 : 142
UMENOS               : 143
VOID                 : 31 33
VOLATILE             : 189
WHILE                : 51 52
XOR_BIT              : 115
error                : 

Nonterminals, with rules where they appear

additive_expression  : 127 128 129 131 132
and_expression       : 114 115 117
arguments            : 34 35 36 37 172
array_type           : 42
assignment_expression : 95
assignment_operator  : 97
block                : 29 45 50 60 62 62 77
catch                : 75 76
catches              : 60 62 75
class_body           : 10
class_decl           : 8 9 23
class_decls          : 1 2 3 8
class_header         : 10
class_member         : 18
class_members        : 17 18
conditional_expression : 96 107
constructor_decl     : 22
creator              : 37 156 162
empty                : 14 16 19 40 49 178
equality_expression  : 116 117 119 120
exclusive_or_expression : 112 113 115
expression           : 28 51 52 53 54 55 59 61 63 69 70 73 97 107 146 147 152 161 173 175
expression_list      : 67 68 70 177
extends_clause       : 11 12
field_decl           : 20
for_init             : 53
for_update           : 53
formal_param         : 38 39 77
formal_params        : 30 31 38 45
implements_clause    : 11 12
import_decl          : 5 6
import_decls         : 1 2 5
inclusive_or_expression : 110 111 113
literal              : 158
local_var_decl       : 64 66
logical_and_expression : 108 109 111
logical_or_expression : 106 107 109
member_access        : 151
method_call          : 157
method_decl          : 21
method_header        : 29
modifier             : 179 180
modifiers            : 11 24 30 31 32 33 45 179
multiplicative_expression : 130 131 132 134 135 136
package_decl         : 1
postfix_expression   : 137 149 150 151 152
primary              : 148
primitive_type       : 43 79 175 176
program              : 0
qualified_id         : 4 7 13 90 93 94 163 172 173 174
qualified_id_list    : 15 93
reference_type       : 44 80 126
relational_expression : 118 119 120 122 123 124 125 126
shift_expression     : 121 122 123 124 125 128 129
statement            : 48 51 52 53 146 147 147
statements           : 46 48 73 74
switch_case          : 71 72
switch_cases         : 54 71
type                 : 24 30 32 41 78
unary_expression     : 133 134 135 136 138 139 140 141 142 143 144 145
variable             : 25 26
variables            : 24 25 78

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . package_decl import_decls class_decls
    (2) program -> . import_decls class_decls
    (3) program -> . class_decls
    (4) package_decl -> . PACKAGE qualified_id PUNTO_Y_COMA
    (5) import_decls -> . import_decl import_decls
    (6) import_decls -> . import_decl
    (8) class_decls -> . class_decl class_decls
    (9) class_decls -> . class_decl
    (7) import_decl -> . IMPORT qualified_id PUNTO_Y_COMA
    (10) class_decl -> . class_header LLAVE_ABIERTA class_body LLAVE_CERRADA
    (11) class_header -> . modifiers CLASS ID extends_clause implements_clause
    (12) class_header -> . CLASS ID extends_clause implements_clause
    (179) modifiers -> . modifier modifiers
    (180) modifiers -> . modifier
    (181) modifier -> . PUBLIC
    (182) modifier -> . PRIVATE
    (183) modifier -> . PROTECTED
    (184) modifier -> . STATIC
    (185) modifier -> . FINAL
    (186) modifier -> . ABSTRACT
    (187) modifier -> . NATIVE
    (188) modifier -> . SYNCHRONIZED
    (189) modifier -> . VOLATILE
    (190) modifier -> . EXPORT
    (191) modifier -> . INTERFACE
    (192) modifier -> . TRANSIENT

    PACKAGE         shift and go to state 5
    IMPORT          shift and go to state 8
    CLASS           shift and go to state 11
    PUBLIC          shift and go to state 13
    PRIVATE         shift and go to state 14
    PROTECTED       shift and go to state 15
    STATIC          shift and go to state 16
    FINAL           shift and go to state 17
    ABSTRACT        shift and go to state 18
    NATIVE          shift and go to state 19
    SYNCHRONIZED    shift and go to state 20
    VOLATILE        shift and go to state 21
    EXPORT          shift and go to state 22
    INTERFACE       shift and go to state 23
    TRANSIENT       shift and go to state 24

    program                        shift and go to state 1
    package_decl                   shift and go to state 2
    import_decls                   shift and go to state 3
    class_decls                    shift and go to state 4
    import_decl                    shift and go to state 6
    class_decl                     shift and go to state 7
    class_header                   shift and go to state 9
    modifiers                      shift and go to state 10
    modifier                       shift and go to state 12

state 1

    (0) S' -> program .



state 2

    (1) program -> package_decl . import_decls class_decls
    (5) import_decls -> . import_decl import_decls
    (6) import_decls -> . import_decl
    (7) import_decl -> . IMPORT qualified_id PUNTO_Y_COMA

    IMPORT          shift and go to state 8

    import_decls                   shift and go to state 25
    import_decl                    shift and go to state 6

state 3

    (2) program -> import_decls . class_decls
    (8) class_decls -> . class_decl class_decls
    (9) class_decls -> . class_decl
    (10) class_decl -> . class_header LLAVE_ABIERTA class_body LLAVE_CERRADA
    (11) class_header -> . modifiers CLASS ID extends_clause implements_clause
    (12) class_header -> . CLASS ID extends_clause implements_clause
    (179) modifiers -> . modifier modifiers
    (180) modifiers -> . modifier
    (181) modifier -> . PUBLIC
    (182) modifier -> . PRIVATE
    (183) modifier -> . PROTECTED
    (184) modifier -> . STATIC
    (185) modifier -> . FINAL
    (186) modifier -> . ABSTRACT
    (187) modifier -> . NATIVE
    (188) modifier -> . SYNCHRONIZED
    (189) modifier -> . VOLATILE
    (190) modifier -> . EXPORT
    (191) modifier -> . INTERFACE
    (192) modifier -> . TRANSIENT

    CLASS           shift and go to state 11
    PUBLIC          shift and go to state 13
    PRIVATE         shift and go to state 14
    PROTECTED       shift and go to state 15
    STATIC          shift and go to state 16
    FINAL           shift and go to state 17
    ABSTRACT        shift and go to state 18
    NATIVE          shift and go to state 19
    SYNCHRONIZED    shift and go to state 20
    VOLATILE        shift and go to state 21
    EXPORT          shift and go to state 22
    INTERFACE       shift and go to state 23
    TRANSIENT       shift and go to state 24

    class_decls                    shift and go to state 26
    class_decl                     shift and go to state 7
    class_header                   shift and go to state 9
    modifiers                      shift and go to state 10
    modifier                       shift and go to state 12

state 4

    (3) program -> class_decls .

    $end            reduce using rule 3 (program -> class_decls .)


state 5

    (4) package_decl -> PACKAGE . qualified_id PUNTO_Y_COMA
    (91) qualified_id -> . ID PUNTO ID
    (92) qualified_id -> . ID

    ID              shift and go to state 28

    qualified_id                   shift and go to state 27

state 6

    (5) import_decls -> import_decl . import_decls
    (6) import_decls -> import_decl .
    (5) import_decls -> . import_decl import_decls
    (6) import_decls -> . import_decl
    (7) import_decl -> . IMPORT qualified_id PUNTO_Y_COMA

    CLASS           reduce using rule 6 (import_decls -> import_decl .)
    PUBLIC          reduce using rule 6 (import_decls -> import_decl .)
    PRIVATE         reduce using rule 6 (import_decls -> import_decl .)
    PROTECTED       reduce using rule 6 (import_decls -> import_decl .)
    STATIC          reduce using rule 6 (import_decls -> import_decl .)
    FINAL           reduce using rule 6 (import_decls -> import_decl .)
    ABSTRACT        reduce using rule 6 (import_decls -> import_decl .)
    NATIVE          reduce using rule 6 (import_decls -> import_decl .)
    SYNCHRONIZED    reduce using rule 6 (import_decls -> import_decl .)
    VOLATILE        reduce using rule 6 (import_decls -> import_decl .)
    EXPORT          reduce using rule 6 (import_decls -> import_decl .)
    INTERFACE       reduce using rule 6 (import_decls -> import_decl .)
    TRANSIENT       reduce using rule 6 (import_decls -> import_decl .)
    IMPORT          shift and go to state 8

    import_decl                    shift and go to state 6
    import_decls                   shift and go to state 29

state 7

    (8) class_decls -> class_decl . class_decls
    (9) class_decls -> class_decl .
    (8) class_decls -> . class_decl class_decls
    (9) class_decls -> . class_decl
    (10) class_decl -> . class_header LLAVE_ABIERTA class_body LLAVE_CERRADA
    (11) class_header -> . modifiers CLASS ID extends_clause implements_clause
    (12) class_header -> . CLASS ID extends_clause implements_clause
    (179) modifiers -> . modifier modifiers
    (180) modifiers -> . modifier
    (181) modifier -> . PUBLIC
    (182) modifier -> . PRIVATE
    (183) modifier -> . PROTECTED
    (184) modifier -> . STATIC
    (185) modifier -> . FINAL
    (186) modifier -> . ABSTRACT
    (187) modifier -> . NATIVE
    (188) modifier -> . SYNCHRONIZED
    (189) modifier -> . VOLATILE
    (190) modifier -> . EXPORT
    (191) modifier -> . INTERFACE
    (192) modifier -> . TRANSIENT

    $end            reduce using rule 9 (class_decls -> class_decl .)
    CLASS           shift and go to state 11
    PUBLIC          shift and go to state 13
    PRIVATE         shift and go to state 14
    PROTECTED       shift and go to state 15
    STATIC          shift and go to state 16
    FINAL           shift and go to state 17
    ABSTRACT        shift and go to state 18
    NATIVE          shift and go to state 19
    SYNCHRONIZED    shift and go to state 20
    VOLATILE        shift and go to state 21
    EXPORT          shift and go to state 22
    INTERFACE       shift and go to state 23
    TRANSIENT       shift and go to state 24

    class_decl                     shift and go to state 7
    class_decls                    shift and go to state 30
    class_header                   shift and go to state 9
    modifiers                      shift and go to state 10
    modifier                       shift and go to state 12

state 8

    (7) import_decl -> IMPORT . qualified_id PUNTO_Y_COMA
    (91) qualified_id -> . ID PUNTO ID
    (92) qualified_id -> . ID

    ID              shift and go to state 28

    qualified_id                   shift and go to state 31

state 9

    (10) class_decl -> class_header . LLAVE_ABIERTA class_body LLAVE_CERRADA

    LLAVE_ABIERTA   shift and go to state 32


state 10

    (11) class_header -> modifiers . CLASS ID extends_clause implements_clause

    CLASS           shift and go to state 33


state 11

    (12) class_header -> CLASS . ID extends_clause implements_clause

    ID              shift and go to state 34


state 12

    (179) modifiers -> modifier . modifiers
    (180) modifiers -> modifier .
    (179) modifiers -> . modifier modifiers
    (180) modifiers -> . modifier
    (181) modifier -> . PUBLIC
    (182) modifier -> . PRIVATE
    (183) modifier -> . PROTECTED
    (184) modifier -> . STATIC
    (185) modifier -> . FINAL
    (186) modifier -> . ABSTRACT
    (187) modifier -> . NATIVE
    (188) modifier -> . SYNCHRONIZED
    (189) modifier -> . VOLATILE
    (190) modifier -> . EXPORT
    (191) modifier -> . INTERFACE
    (192) modifier -> . TRANSIENT

    CLASS           reduce using rule 180 (modifiers -> modifier .)
    ID              reduce using rule 180 (modifiers -> modifier .)
    VOID            reduce using rule 180 (modifiers -> modifier .)
    INT             reduce using rule 180 (modifiers -> modifier .)
    FLOAT           reduce using rule 180 (modifiers -> modifier .)
    DOUBLE          reduce using rule 180 (modifiers -> modifier .)
    CHAR            reduce using rule 180 (modifiers -> modifier .)
    BOOLEAN         reduce using rule 180 (modifiers -> modifier .)
    SHORT           reduce using rule 180 (modifiers -> modifier .)
    LONG            reduce using rule 180 (modifiers -> modifier .)
    STRING          reduce using rule 180 (modifiers -> modifier .)
    BYTE            reduce using rule 180 (modifiers -> modifier .)
    PUBLIC          shift and go to state 13
    PRIVATE         shift and go to state 14
    PROTECTED       shift and go to state 15
    STATIC          shift and go to state 16
    FINAL           shift and go to state 17
    ABSTRACT        shift and go to state 18
    NATIVE          shift and go to state 19
    SYNCHRONIZED    shift and go to state 20
    VOLATILE        shift and go to state 21
    EXPORT          shift and go to state 22
    INTERFACE       shift and go to state 23
    TRANSIENT       shift and go to state 24

    modifier                       shift and go to state 12
    modifiers                      shift and go to state 35

state 13

    (181) modifier -> PUBLIC .

    PUBLIC          reduce using rule 181 (modifier -> PUBLIC .)
    PRIVATE         reduce using rule 181 (modifier -> PUBLIC .)
    PROTECTED       reduce using rule 181 (modifier -> PUBLIC .)
    STATIC          reduce using rule 181 (modifier -> PUBLIC .)
    FINAL           reduce using rule 181 (modifier -> PUBLIC .)
    ABSTRACT        reduce using rule 181 (modifier -> PUBLIC .)
    NATIVE          reduce using rule 181 (modifier -> PUBLIC .)
    SYNCHRONIZED    reduce using rule 181 (modifier -> PUBLIC .)
    VOLATILE        reduce using rule 181 (modifier -> PUBLIC .)
    EXPORT          reduce using rule 181 (modifier -> PUBLIC .)
    INTERFACE       reduce using rule 181 (modifier -> PUBLIC .)
    TRANSIENT       reduce using rule 181 (modifier -> PUBLIC .)
    CLASS           reduce using rule 181 (modifier -> PUBLIC .)
    ID              reduce using rule 181 (modifier -> PUBLIC .)
    VOID            reduce using rule 181 (modifier -> PUBLIC .)
    INT             reduce using rule 181 (modifier -> PUBLIC .)
    FLOAT           reduce using rule 181 (modifier -> PUBLIC .)
    DOUBLE          reduce using rule 181 (modifier -> PUBLIC .)
    CHAR            reduce using rule 181 (modifier -> PUBLIC .)
    BOOLEAN         reduce using rule 181 (modifier -> PUBLIC .)
    SHORT           reduce using rule 181 (modifier -> PUBLIC .)
    LONG            reduce using rule 181 (modifier -> PUBLIC .)
    STRING          reduce using rule 181 (modifier -> PUBLIC .)
    BYTE            reduce using rule 181 (modifier -> PUBLIC .)


state 14

    (182) modifier -> PRIVATE .

    PUBLIC          reduce using rule 182 (modifier -> PRIVATE .)
    PRIVATE         reduce using rule 182 (modifier -> PRIVATE .)
    PROTECTED       reduce using rule 182 (modifier -> PRIVATE .)
    STATIC          reduce using rule 182 (modifier -> PRIVATE .)
    FINAL           reduce using rule 182 (modifier -> PRIVATE .)
    ABSTRACT        reduce using rule 182 (modifier -> PRIVATE .)
    NATIVE          reduce using rule 182 (modifier -> PRIVATE .)
    SYNCHRONIZED    reduce using rule 182 (modifier -> PRIVATE .)
    VOLATILE        reduce using rule 182 (modifier -> PRIVATE .)
    EXPORT          reduce using rule 182 (modifier -> PRIVATE .)
    INTERFACE       reduce using rule 182 (modifier -> PRIVATE .)
    TRANSIENT       reduce using rule 182 (modifier -> PRIVATE .)
    CLASS           reduce using rule 182 (modifier -> PRIVATE .)
    ID              reduce using rule 182 (modifier -> PRIVATE .)
    VOID            reduce using rule 182 (modifier -> PRIVATE .)
    INT             reduce using rule 182 (modifier -> PRIVATE .)
    FLOAT           reduce using rule 182 (modifier -> PRIVATE .)
    DOUBLE          reduce using rule 182 (modifier -> PRIVATE .)
    CHAR            reduce using rule 182 (modifier -> PRIVATE .)
    BOOLEAN         reduce using rule 182 (modifier -> PRIVATE .)
    SHORT           reduce using rule 182 (modifier -> PRIVATE .)
    LONG            reduce using rule 182 (modifier -> PRIVATE .)
    STRING          reduce using rule 182 (modifier -> PRIVATE .)
    BYTE            reduce using rule 182 (modifier -> PRIVATE .)


state 15

    (183) modifier -> PROTECTED .

    PUBLIC          reduce using rule 183 (modifier -> PROTECTED .)
    PRIVATE         reduce using rule 183 (modifier -> PROTECTED .)
    PROTECTED       reduce using rule 183 (modifier -> PROTECTED .)
    STATIC          reduce using rule 183 (modifier -> PROTECTED .)
    FINAL           reduce using rule 183 (modifier -> PROTECTED .)
    ABSTRACT        reduce using rule 183 (modifier -> PROTECTED .)
    NATIVE          reduce using rule 183 (modifier -> PROTECTED .)
    SYNCHRONIZED    reduce using rule 183 (modifier -> PROTECTED .)
    VOLATILE        reduce using rule 183 (modifier -> PROTECTED .)
    EXPORT          reduce using rule 183 (modifier -> PROTECTED .)
    INTERFACE       reduce using rule 183 (modifier -> PROTECTED .)
    TRANSIENT       reduce using rule 183 (modifier -> PROTECTED .)
    CLASS           reduce using rule 183 (modifier -> PROTECTED .)
    ID              reduce using rule 183 (modifier -> PROTECTED .)
    VOID            reduce using rule 183 (modifier -> PROTECTED .)
    INT             reduce using rule 183 (modifier -> PROTECTED .)
    FLOAT           reduce using rule 183 (modifier -> PROTECTED .)
    DOUBLE          reduce using rule 183 (modifier -> PROTECTED .)
    CHAR            reduce using rule 183 (modifier -> PROTECTED .)
    BOOLEAN         reduce using rule 183 (modifier -> PROTECTED .)
    SHORT           reduce using rule 183 (modifier -> PROTECTED .)
    LONG            reduce using rule 183 (modifier -> PROTECTED .)
    STRING          reduce using rule 183 (modifier -> PROTECTED .)
    BYTE            reduce using rule 183 (modifier -> PROTECTED .)


state 16

    (184) modifier -> STATIC .
